--- a/SharkGaming/Pages/Index.cshtml
+++ b/SharkGaming/Pages/Index.cshtml
@@ -9,3 +9,4 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 <h1> CC Wrote this</h1>
+<h1> Mads er en dansemus</h1>
